--- a/perceptron_assignment.ipynb
+++ b/perceptron_assignment.ipynb
@@ -97,18 +97,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_perceptron(dataset, max_iterations):\n",
-    "    \n",
-    "    w = {}\n",
-    "    w[0] = "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -295,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,6 +295,22 @@
     "        \n",
     "    def __repr__(self):\n",
     "        return str(self._)\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self._)\n",
+    "    \n",
+    "    def __mul__(self, other):\n",
+    "        multiplied_vector = []\n",
+    "        for x in self._:\n",
+    "            multiplied_vector.append(x*other)\n",
+    "        return multiplied_vector\n",
+    "    \n",
+    "    def __rmul__(self, other):\n",
+    "        multiplied_vector = []\n",
+    "        for x in self._:\n",
+    "            multiplied_vector.append(x*other)\n",
+    "        return multiplied_vector\n",
+    "    \n",
     "    \n",
     "    def checks(self, vector):\n",
     "        try:\n",
@@ -340,15 +344,6 @@
     "    def angle(self,vector):\n",
     "        theta = math.acos(self.cosine_similarity(vector))\n",
     "        return theta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = load_data('train.data')"
    ]
   },
   {
@@ -391,10 +386,11 @@
     "                list_vector.append(element)\n",
     "            \n",
     "            # convert the list of floats to a numpy array vector\n",
-    "            vector = np.array(list_vector)\n",
+    "            x = np.array(list_vector)\n",
+    "#             x = vector(list_vector)\n",
     "            \n",
     "            # load the label and vector into the data dict\n",
-    "            data.append((class_name, vector))\n",
+    "            data.append((class_name, x))\n",
     "            \n",
     "            if with_print==True:\n",
     "                print(f'Extracted \"{datum}\" to \"{data[i]}\".')\n",
@@ -407,27 +403,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = load_data('test.data')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## def"
+    "train_data = load_data('train.data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_perceptron(positive_label='1', negative_label='2', max_iterations=10000, max_updates=100000, training_dataset=train):\n",
+    "test_data = load_data('test.data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(positive_label='1', negative_label='2', max_iterations=10000, max_updates=100000, training_dataset=train_data):\n",
     "    \"\"\"Train Perceptron on given training dataset.\n",
     "    \n",
     "    Args:\n",
@@ -465,7 +463,10 @@
     "        \n",
     "            x = datum[1]\n",
     "            \n",
-    "            if y[i]*(w[k].dot(x)) <= 0:\n",
+    "            if y[i]==0:\n",
+    "                pass\n",
+    "            \n",
+    "            elif y[i]*(w[k].dot(x)) <= 0:\n",
     "                # ie. if incorrectly classified\n",
     "                w[k+1] = w[k] + y[i]*x\n",
     "                k = k+1\n",
@@ -483,109 +484,17 @@
     "            'negative_label':negative_label,\n",
     "            'updates':k,\n",
     "            'w':w,\n",
-    "            'counts':count_updates\n",
+    "            'counts':count_updates,\n",
     "           }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = train_perceptron(max_iterations=20)\n",
-    "q = train_perceptron(max_updates=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 20}"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q['counts']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 42,\n",
-       " 1: 84,\n",
-       " 2: 125,\n",
-       " 3: 165,\n",
-       " 4: 205,\n",
-       " 5: 245,\n",
-       " 6: 285,\n",
-       " 7: 325,\n",
-       " 8: 365,\n",
-       " 9: 405,\n",
-       " 10: 445,\n",
-       " 11: 485,\n",
-       " 12: 525,\n",
-       " 13: 565,\n",
-       " 14: 605,\n",
-       " 15: 645,\n",
-       " 16: 685,\n",
-       " 17: 725,\n",
-       " 18: 765,\n",
-       " 19: 805}"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p['counts']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'weights': array([ 177. ,   98. ,  125. , -157.3, -248.4]),\n",
-       " 'positive_label': '2',\n",
-       " 'negative_label': '3',\n",
-       " 'updates': 43195}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_perceptron('2','3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_perceptron(trained_perceptron, test_dataset=test):\n",
+    "def test(trained_perceptron, test_dataset=test_data):\n",
     "    \n",
     "    w = trained_perceptron['weights']\n",
     "    \n",
@@ -600,86 +509,20 @@
     "        else:\n",
     "            y[i] = 0\n",
     "    \n",
-    "    results = []\n",
     "    right = 0\n",
     "    wrong = 0\n",
+    "\n",
     "    for i, datum in enumerate(test_dataset):\n",
     "        x = datum[1]\n",
     "        if y[i] == 0:\n",
     "            pass\n",
     "        elif y[i] * w.dot(x) > 0:\n",
-    "            results.append('right')\n",
     "            right += 1\n",
     "        else:\n",
-    "#             print(w)\n",
-    "#             print(datum)\n",
-    "#             print(y[i]*w.dot(x))\n",
-    "            results.append('wrong')\n",
     "            wrong += 1\n",
     "    score = right/(right+wrong) * 100\n",
-    "#     print(f'Success rate: {score}%')\n",
-    "#     return results\n",
+    "    \n",
     "    return f'Success rate: {score}%'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('1', array([1. , 5. , 3.5, 1.3, 0.3]))"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Success rate: 100.0%'"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_perceptron(train_perceptron('1','3', max_iterations=20), train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Success rate: 0.0%'"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_perceptron(train_perceptron('2','3', max_updates=20), train)"
    ]
   },
   {
@@ -691,6 +534,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = train('1','2', max_iterations=20)\n",
+    "b = train('2','3', max_iterations=20)\n",
+    "c = train('1','3', max_iterations=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Success rate: 100.0%'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Success rate: 50.0%'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Success rate: 100.0%'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is clearly most difficult to separate classes 2 and 3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many iterations would we have to train our perceptron for to get 100% success on our test set?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0,100):\n",
+    "    attempt = test(train('2','3',max_iterations=i))\n",
+    "    if attempt == 'Success rate: 100.0%':\n",
+    "        print(f'{i} iterations gives us 100% success')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -699,11 +639,211 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1. ,  1.3,  4.1, -5.2, -2.2])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a['weights']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fourth of the five features seems to be the most discriminative: *-5.2* being the value with the greatest absolute magnitude.\n",
+    "\n",
+    "(Note that when we say the *fourth*, we mean the value that corresponds to the third of four values given for each element of the dataset, since the first feature of our classifier is the bias term incorporated into the sensitivity weight-vector)."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Task 6. Extend...\n",
     "> Extend the binary perceptron that you implemented in part (2) above to perform multi-class classification using the 1-vs-rest approach. Report the train and test classification accuracies for each of the three classes after training for 20 iterations. (15 marks),"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiclass_perceptron(positive_label='1', max_iterations=10000, max_updates=100000, training_dataset=train):\n",
+    "\n",
+    "    # load training_dataset\n",
+    "    data = training_dataset\n",
+    "    \n",
+    "    # find length of dataset vectors\n",
+    "    vector_length = len(data[0][1])\n",
+    "    \n",
+    "    # \n",
+    "    w = {}\n",
+    "        \n",
+    "    # initialize weight_vector\n",
+    "    w[0] = np.zeros(vector_length)\n",
+    "    \n",
+    "    # label test data\n",
+    "    y = {}\n",
+    "    for i, datum in enumerate(data):\n",
+    "        class_name = datum[0]\n",
+    "        if class_name == positive_label:\n",
+    "            y[i] = 1\n",
+    "        else:\n",
+    "            y[i] = -1\n",
+    "    \n",
+    "    k = 0\n",
+    "    count_updates = {}\n",
+    "    for n in range(0, max_iterations):\n",
+    "        \n",
+    "        for i, datum in enumerate(data):\n",
+    "        \n",
+    "            x = datum[1]\n",
+    "            \n",
+    "            if y[i]==0:\n",
+    "                pass\n",
+    "            \n",
+    "            elif y[i]*(w[k].dot(x)) <= 0:\n",
+    "                # ie. if incorrectly classified\n",
+    "                w[k+1] = w[k] + y[i]*x\n",
+    "                k = k+1\n",
+    "                if k == max_updates:\n",
+    "                    break\n",
+    "        \n",
+    "        count_updates[n] = k        \n",
+    "        if n>0 and count_updates[n] == count_updates[n-1]:\n",
+    "            break\n",
+    "        if k >= max_updates:\n",
+    "            break\n",
+    "            \n",
+    "    return {'weights':w[k], \n",
+    "            'positive_label':positive_label, \n",
+    "            'updates':k,\n",
+    "            'w':w,\n",
+    "            'counts':count_updates,\n",
+    "           }\n",
+    "\n",
+    "def test_multiclass_perceptron(trained_perceptron, test_dataset=test):\n",
+    "    \n",
+    "    w = trained_perceptron['weights']\n",
+    "    \n",
+    "    # label test dataset\n",
+    "    y = {}\n",
+    "    for i, datum in enumerate(test_dataset):\n",
+    "        class_name = datum[0]\n",
+    "        if class_name == trained_perceptron['positive_label']:\n",
+    "            y[i] = 1\n",
+    "        else:\n",
+    "            y[i] = -1\n",
+    "    \n",
+    "    right = 0\n",
+    "    wrong = 0\n",
+    "\n",
+    "    for i, datum in enumerate(test_dataset):\n",
+    "        x = datum[1]\n",
+    "        if y[i] == 0:\n",
+    "            pass\n",
+    "        elif y[i] * w.dot(x) > 0:\n",
+    "            right += 1\n",
+    "        else:\n",
+    "            wrong += 1\n",
+    "    score = right/(right+wrong) * 100\n",
+    "    \n",
+    "    return f'Success rate: {score}%'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = multiclass_perceptron('1', max_iterations=20)\n",
+    "e = multiclass_perceptron('2', max_iterations=20)\n",
+    "f = multiclass_perceptron('3', max_iterations=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Success rate: 100.0%'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_multiclass_perceptron(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Success rate: 66.66666666666666%'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_multiclass_perceptron(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Success rate: 70.0%'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_multiclass_perceptron(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = multiclass_perceptron('1', max_updates=20)\n",
+    "m = multiclass_perceptron('2', max_updates=20)\n",
+    "n = multiclass_perceptron('3', max_updates=20)"
    ]
   },
   {
