--- a/COMP527_Perceptron_Student201442927.ipynb
+++ b/COMP527_Perceptron_Student201442927.ipynb
@@ -216,7 +216,7 @@
     "and so by induction $$ \\|\\mathbf{w}^{k+1}\\|^2 \\le kR^2 \\tag{8}$$\n",
     "$\\forall k \\in \\Bbb{N}$ since if true for any $k \\in \\Bbb{N}$  \n",
     "then (8) + (7) $\\implies \\|\\mathbf{w}^{k+1}\\|^2 \\le  (k-1)R^2 + R^2 = kR^2 $\n",
-    "and Def.3 $\\implies \\mathbf{x}^0 = \\mathbf{0} \\le R^2 $"
+    "and Def.3 $\\implies \\mathbf{w}^0 = \\mathbf{0} \\le R^2 $"
    ]
   },
   {
