--- a/COMP527_Perceptron_Student201442927.ipynb
+++ b/COMP527_Perceptron_Student201442927.ipynb
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and from Definition 3 we know that $$\\mathbf{w}_0 = \\mathbf{0}.$$\n",
+    "and from Definition 3 we know that $$\\mathbf{w}^0 = \\mathbf{0}.$$\n",
     "so substituting k=0 into (3), with (4) gives us $$\\mathbf{w}^1 > \\mathbf{0} + \\epsilon$$ and thus proving (4)."
    ]
   },
