--- a/COMP527_Perceptron_Student201442927.ipynb
+++ b/COMP527_Perceptron_Student201442927.ipynb
@@ -137,11 +137,14 @@
     "\n",
     "Lemma 1 means that we can assume without loss of generality that our dataset is divided by an origin-intersecting hyperplane.\n",
     "\n",
-    "In such a case it is simple to see that we can choose a normal $\\mathbf{n}$ for our hyperplane such that $\\|\\mathbf{n}\\| = 1 \\tag{0}$.\n",
+    "In such a case it is simple to see that we can choose a normal $\\mathbf{n}$ for our hyperplane such that $\\|\\mathbf{n}\\| = 1 \\tag{0}$\n",
     "\n",
-    "Given a finite dataset, we must have some point lying closest to the separating hyperplane, such that it minimizes $$ y_{i}(\\mathbf{x}_{i} \\cdot \\mathbf{n} ) = 2 \\epsilon >  \\epsilon \\in \\Bbb{R} \\tag{1} $$\n",
+    "From the definition of linear separability we know that $\\forall \\mathbf{x}_{i}, \\\\ y_{i}(\\mathbf{x}_{i} \\cdot \\mathbf{n}) - c > 0 $.\n",
     "\n",
-    "We must also have some point furthest from the origin, such that it maximizes $$ \\| \\mathbf{x}_{i} \\| = \\frac{1}{2} R < R \\in \\Bbb{R} \\tag{2}$$"
+    "We have chosen to remap our dataset so it is divided by an origin-intersecting hyperplane, so c=0 and $\\forall \\mathbf{x}_{i}, \\\\ y_{i}(\\mathbf{x}_{i} \\cdot \\mathbf{n}) > 0 $.\n",
+    "\n",
+    "But given a finite dataset, we must have some point(s) that minimizes $ y_{i}(\\mathbf{x}_{i} \\cdot \\mathbf{n} ) $ and therefore it must be true $ \\forall \\mathbf{x}_{i}, y_{i} $ \n",
+    "$$ y_{i}(\\mathbf{x}_{i} \\cdot \\mathbf{n} ) = 2 \\epsilon >  \\epsilon \\in \\Bbb{R} \\tag{1} $$"
    ]
   },
   {
@@ -772,13 +775,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```\n",
     "# the new update rule\n",
-    "w[k+1] = w[k] + y[i]*x - 2 * regularisation_coefficient * w[k]"
+    "w[k+1] = w[k] + y[i]*x - 2 * regularisation_coefficient * w[k]\n",
+    "```"
    ]
   },
   {
